Diseño de staticPage terminado y iniciando productosController

--- a/app/views/productos.hbs
+++ b/app/views/productos.hbs
@@ -7,8 +7,6 @@
 </head>
 <body>
 	{{> menu}}
-	<main class="main">
-		<h1>Bienvenido a Storemanager</h1>
-	</main>
+	<h1>Productos</h1>
 </body>
 </html>
