--- a/public/styles/reset.css
+++ b/public/styles/reset.css
@@ -1,12 +1,3 @@
-/* Guia de estilo 
-1. Reset
-
-
-
-
-*/
-
-/* -------- 1. Reset -------- */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -49,4 +40,9 @@ q:before, q:after {
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
+}
+html,body,.main{
+	width: 100%;
+	height: 100%;
+	font-family: 'Montserrat', sans-serif;
 }
