--- a/public/styles/inicio.css
+++ b/public/styles/inicio.css
@@ -1,6 +1,6 @@
 /* Guia de estilo 
 1. Reset
-
+2. Header
 
 
 
@@ -50,3 +50,8 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+/* -------- 2. Header -------- */
+
+
+
