Diseño de fiadosDetalles

--- a/app/views/fiados.hbs
+++ b/app/views/fiados.hbs
@@ -3,7 +3,7 @@
 <head>
 	<title>Bienvenido</title>
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="styles/fiados.css">
+	<link rel="stylesheet" type="text/css" href="/styles/fiados.css">
 </head>
 <body>
 	{{> menu}}
@@ -21,13 +21,13 @@
 
 
 			  <tr>
-			    <td><a href="#">Lucas Casemiro Perez</a></td>
+			    <td><a href="/fiados/1">Lucas Casemiro Perez</a></td>
 			    <td>10</td> 
 			    <td>$ 50.000</td>
 			    <td class="maximoFiar">$ 50.000</td>
 			  </tr>
 			  <tr>
-			    <td><a href="#">Juan Diego Avila</a></td>
+			    <td><a href="/fiados/2">Juan Diego Avila</a></td>
 			    <td>7</td> 
 			    <td>$ 3.400</td>
 			    <td class="maximoFiar">$ 15.000</td>
