--- a/app/views/inicio.hbs
+++ b/app/views/inicio.hbs
@@ -3,7 +3,7 @@
 <head>
 	<title>Bienvenido</title>
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="styles/staticPage.css">
+	<link rel="stylesheet" type="text/css" href="/styles/staticPage.css">
 </head>
 <body>
 	{{> menu}}
