Base de datos y diseño de la pagina de usuarios

--- a/app/views/productos.hbs
+++ b/app/views/productos.hbs
@@ -45,11 +45,18 @@
 			</div>
 			<div class="cuadro-3">
 				<label>Total: $ 6.000</label>
-				<button class="botonCotizar">Cotizar</button>
+				<div class="divBotons">
+					<button class="botonCotizar">Fiar</button>
+					<button class="botonCotizar">Cotizar</button>
+				</div>
 			</div>
 		</div>
 
 
 	</main>
+
+
+	<div class="cuadroFiadores"></div>
+
 </body>
 </html>
