--- a/app/views/layouts/menu.hbs
+++ b/app/views/layouts/menu.hbs
@@ -3,5 +3,6 @@
 	<div class="items">
 		<a href="/productos">Productos</a>
 		<a href="/fiados">Fiados</a>
+		<a href="/usuarios">Usuarios</a>
 	</div>
 </header>
