--- a/public/styles/productos.css
+++ b/public/styles/productos.css
@@ -5,6 +5,7 @@
 4. Contenedor
 5. Tabla
 6. cuadro-3
+7. divFiadores
 */
 
 /* -------- 1. Reset -------- */
@@ -150,4 +151,68 @@ td {
 	cursor: pointer;
 }
 
-
+/* -------- 7. divFiadores -------- */
+.divFiadores{
+	background-color: rgba(0, 0, 0, 0.4);
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	display: none;
+}
+.cuadroFiadores{
+	width:auto;
+	height: 500px;
+	background-color: white;
+	display: flex;
+	flex-direction: column;
+}
+.headerFiadores{
+	width: 100%;
+	height: 50px;
+	background-color: #f7f7f7;
+	border-bottom: 1px solid #cbcbcb;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+#cerrar{
+	margin-right: 10px;
+	cursor: pointer;
+}
+.labelFiar{
+	font-size: 20px;
+	margin-left: 10px;
+}
+.bodyFiadores{
+	width: 100%;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+}
+.buscarFiador{
+	width: 100%;
+	height: 50px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.buscarFiador input{
+	width: 60%;
+	padding: 5px;
+	border:1px solid #cbcbcb;
+	outline: none;
+}
+.listaFiadores{
+	width: 100%;
+	height: 100%;
+	overflow: scroll;
+	display: flex;
+	justify-content: center;
+}
+.listaFiadores table{
+	margin:10px;
+}
