--- a/app/views/layouts/menu.hbs
+++ b/app/views/layouts/menu.hbs
@@ -1,7 +1,8 @@
 <header class="header">
 	<h1>Storemanager</h1>
 	<div class="items">
-		<a href="/productos">Productos</a>
+		<a href="/vender">Vender</a>
+		<a href="/productos">productos</a>
 		<a href="/fiados">Fiados</a>
 		<a href="/usuarios">Usuarios</a>
 	</div>
