--- a/app/views/clientes.hbs
+++ b/app/views/clientes.hbs
@@ -10,15 +10,15 @@
 	<main class="main">
 		
 		<div class="contenedor">
-			<h1 class="titulo">Agregar usuarios</h1>
-			<form action="/usuarios" method="POST">
+			<h1 class="titulo">Agregar cliente</h1>
+			<form action="/clientes" method="POST">
 				<input type="text" name="txt1" placeholder="Nombre" class="txt1">
-				<input type="submit" value="Agregar usuario">
+				<input type="submit" value="Agregar cliente">
 			</form>
 		</div>
 		{{#if mensaje}}
 			<div class="usuarioInsertado">
-				<h3>Usuario insertado correctamente</h3>
+				<h3>cliente insertado correctamente</h3>
 			</div>
 		{{/if}}
 	</main>
