--- a/app/views/vender.hbs
+++ b/app/views/vender.hbs
@@ -3,7 +3,7 @@
 <head>
 	<title>Vender</title>
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="/styles/productos.css">
+	<link rel="stylesheet" type="text/css" href="/styles/vender.css">
 	
 </head>
 <body>
