--- a/public/styles/productos.css
+++ b/public/styles/productos.css
@@ -3,9 +3,7 @@
 2. Menu
 3. Main
 4. Contenedor
-5. Tabla
-6. cuadro-3
-7. divFiadores
+5. usuarioInsertado
 */
 
 /* -------- 1. Reset -------- */
@@ -18,8 +16,7 @@
 .main{
 	display: flex;
 	align-items: center;
-	justify-content: center;
-	flex-direction:column;
+    flex-direction:column;
 }
 
 /* -------- 4. Contenedor -------- */
@@ -32,6 +29,8 @@
 	height: auto;
 	padding: 5px;
 	overflow: hidden;
+	margin-top: 80px;
+	text-align: center;
 }
 .txt1{
 	width: 98.2%;
@@ -41,181 +40,11 @@
 	outline: none;
 	padding: 4px 4px 4px 10px;
 }
-.cuadro-1{
-	width: 100%;
-	height: 200px;
-	border:1px solid #cbcbcb;
-	display: flex;
-	justify-content:space-between;
-	align-items: center;
-}
-.cuadro-1 .item-1{
-	width: 50%;
-	height: 80%;
-	display: flex;
-	justify-content: center;
-}
-.cuadro-1 .item-1 .foto{
-	width: 250px;
-	height: auto;
-	background-image: url('https://truffle-assets.imgix.net/53c582f4-torta-alfajor-s-thumb.jpg');
-	background-size:contain;
-	background-position: center;
-	background-repeat: no-repeat;
-}
-.cuadro-1 .item-2{
-	width: 50%;
-	height: auto;
-	display: flex;
-	flex-direction: column;
-	align-items: flex-start;
-	justify-content: center;
-}
-.cuadro-1 .item-2 label{
-	margin:10px;
-	font-size: 18px; 
-}
-.txtCantidad{
-	margin:10px;
-	padding: 5px;
-	outline: none;
-	border:1px solid #cbcbcb;
-}
-.btn1{
-	margin:10px;
-	width: 200px;
-	height: 30px;
-	padding: 8px;
-	background-color:#f7f7f7;
-	border:1px solid #cbcbcb;
-	cursor: pointer;
-	outline: none;
-}
-.btn1:active{
-	background-color: gray;
-	color: white;
-	cursor: pointer;
-}
 
-/* -------- 5. Tabla -------- */
-.cuadro-2{
-	width: 100%;
-	height: 200px;
-	margin-top: 10px;
-	overflow: scroll;
-	border:1px solid #cbcbcb;
-}
-.cuadro-2 .tabla{
-	width: 100%;
-	height: 100%;
-	border-collapse: collapse;
-}
-th{
-	border: 1px solid #dddddd;
-    text-align: left;
-    padding: 8px;
-    font-weight: bold;
-}
-td {
-    border: 1px solid #dddddd;
-    text-align: left;
-    padding: 8px;
-}
-
-/* -------- 6. cuadro-3 -------- */
-
-.cuadro-3{
-	margin-top: 10px;
-	padding: 5px;
-	border:1px solid #cbcbcb;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-}
-.cuadro-3 label{
-	margin: 5px;
-}
-.botonCotizar{
-	margin:5px;
-	width: 100px;
-	height: 30px;
-	padding: 8px;
-	background-color:#f7f7f7;
-	border:1px solid #cbcbcb;
-	cursor: pointer;
-	outline: none;
-}
-.botonCotizar:active{
-	background-color: gray;
-	color: white;
-	cursor: pointer;
-}
-
-/* -------- 7. divFiadores -------- */
-.divFiadores{
-	background-color: rgba(0, 0, 0, 0.4);
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	top: 0px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	display: none;
-}
-.cuadroFiadores{
-	width:auto;
-	height: 500px;
-	background-color: white;
-	display: flex;
-	flex-direction: column;
-}
-.headerFiadores{
-	width: 100%;
-	height: 50px;
-	background-color: #f7f7f7;
-	border-bottom: 1px solid #cbcbcb;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-}
-#cerrar{
-	margin-right: 10px;
-	cursor: pointer;
-}
-.labelFiar{
-	font-size: 20px;
-	margin-left: 10px;
-}
-.bodyFiadores{
-	width: 100%;
-	height: 100%;
-	display: flex;
-	flex-direction: column;
-}
-.buscarFiador{
-	width: 100%;
-	height: 50px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-.buscarFiador input{
-	width: 60%;
-	padding: 5px;
-	border:1px solid #cbcbcb;
-	outline: none;
-}
-.listaFiadores{
-	width: 100%;
-	height: 100%;
-	overflow: scroll;
-	display: flex;
-	justify-content: center;
-}
-.listaFiadores table{
-	margin:10px;
-}
-.listaFiadores table tr button {
-	cursor: pointer;
+/* -------- 5. usuarioInsertado -------- */
+.usuarioInsertado{
+	background-color:rgba(142, 255, 114, 0.5);
+	margin:20px;
+	padding: 10px;
+	border-radius: 5px;
 }
