--- a/app/views/layouts/menu.hbs
+++ b/app/views/layouts/menu.hbs
@@ -2,8 +2,9 @@
 	<h1>Storemanager</h1>
 	<div class="items">
 		<a href="/vender">Vender</a>
-		<a href="/productos">productos</a>
+		<a href="/productos">Productos</a>
+		<a href="/vender/ventas">Ventas</a>
 		<a href="/fiados">Fiados</a>
-		<a href="/usuarios">Usuarios</a>
+		<a href="/clientes">Clientes</a>
 	</div>
 </header>
