--- a/app/views/vender.hbs
+++ b/app/views/vender.hbs
@@ -12,7 +12,7 @@
 	<main class="main">
 		<h1 class="titulo">Vender</h1>
 		<div class="contenedor">
-			<input type="text" name="txt1" id="txtbuscarProductos" placeholder="Buscar producto" class="txt1">
+			<input type="text" name="txt1" id="txtbuscarProductos" placeholder="Buscar producto" class="txt1" autofocus>
 			<div class="cuadro-2">
 			<table class="tabla" id="tablaProductosDB">
 				  <tr>
